--- a/ERPWeb/Views/ControlPanel/_GetUsers.cshtml
+++ b/ERPWeb/Views/ControlPanel/_GetUsers.cshtml
@@ -30,6 +30,7 @@
                     <th style="vertical-align:middle">Role</th>
                     <th style="vertical-align:middle">Entry User</th>
                     <th style="vertical-align:middle" class="hide">Update User</th>
+                    <th style="vertical-align:middle">Zone/Division/Region/Area/Territory/Stockiest</th>
                     <th style="vertical-align:middle">Actions</th>
                 </tr>
             </thead>
@@ -70,8 +71,45 @@
                     </td>
                     <td class="text-sm">@user.EntryUser</td>
                     <td class="hide">@user.UpdateUser</td>
+                    @if (user.RoleId == 29)
+                    {
+                        <td class="">N/A</td>
+     
+                    }
+                    @if (user.RoleId == 30)
+                    {
 
-                  
+
+                        <td data-div="@user.DivisionName">
+                            @foreach (var div in user.DivisionName)
+                            {
+                                <span class="badge badge-primary"> @div.DivisionName</span>
+                            }
+                        </td>
+
+                    }
+                    @if (user.RoleId == 31)
+                    {
+
+                        <td class="">N/A</td>
+                    }
+                    @if (user.RoleId == 32)
+                    {
+
+                        <td class="">N/A</td>
+                    }
+                    @if (user.RoleId == 33)
+                    {
+
+                        <td class="">N/A</td>
+                    }
+                    @if (user.RoleId == 31)
+                    {
+
+                        <td class="">N/A</td>
+                    }
+
+
 
 
                     <td class="text-center">
