--- a/ERPWeb/Views/AgroConfiguration/_GetAgroSalesProductDetails.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetAgroSalesProductDetails.cshtml
@@ -16,7 +16,7 @@
             <td style="width:20%"><b>@info.InvoiceDate</b></td>
             <td style="width:13%">StockiestName</td>
             <td style="width:20%"><b>@info.StockiestName</b></td>
-            //<td style="width:20%" class="hide"><b>@info.StockiestId</b></td>
+            <td style="width:20%" class="hide"><b>@info.StockiestId</b></td>
         </tr>
     }
 </table>
