--- a/ERPWeb/Views/AgroConfiguration/_GetAgroSalesProductList.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/_GetAgroSalesProductList.cshtml
@@ -44,7 +44,7 @@
                         <i class="fas fa-money-bill"></i>
                     </a>
                     @*}
-<<<<<<< Updated upstream
+
                         @if (privilege != null && privilege.Edit)
                         {*@
                     <a href="#" class="btn btn-sm btn-outline-success data-edit-item-download" title="Download" data-edit-item-download="@item.ProductSalesInfoId" style="line-height:1">
@@ -56,19 +56,27 @@
                     <a href="#" class="btn btn-sm btn-outline-danger data-item-collection" title="Collection" data-item-collection="@item.ProductSalesInfoId" style="line-height:1">
                         <i class="bi bi-collection"></i>
                     </a>
-=======
+
         @if (privilege != null && privilege.Edit)
         {*@
                     @*<a href="#" class="btn btn-sm btn-outline-warning data-item-edit" title="Edit" data-edit-item="@item.ProductSalesInfoId" style="line-height:1">
             <i class="fas fa-pen"></i>
         </a>*@
                     @*}
+
+        @if (privilege != null && privilege.Edit)
+        {*@
+                    @*<a href="#" class="btn btn-sm btn-outline-warning data-item-edit" title="Edit" data-edit-item="@item.ProductSalesInfoId" style="line-height:1">
+            <i class="fas fa-pen"></i>
+        </a>*@
+                    @*}
+
         @if (privilege != null && privilege.Delete)
         {*@
                     @*<a href="#" class="btn btn-sm btn-outline-danger data-item-del" title="Delete" data-del-item="@item.ProductSalesInfoId" style="line-height:1">
             <i class="fas fa-trash"></i>
         </a>*@
->>>>>>> Stashed changes
+
                     @*}*@
 
                 </td>
