--- a/ERPWeb/Views/AgroConfiguration/CreateAgroSalesProduct.cshtml
+++ b/ERPWeb/Views/AgroConfiguration/CreateAgroSalesProduct.cshtml
@@ -19,7 +19,7 @@
         <div class="card card-gray shadow">
             <div class="card-header">
                 <div class="row">
-                    <div class="col-md-3">
+                    <div class="col-md-3" style="margin-top:-8px;">
                         <a href="/AgroConfiguration/GetFinishGoodRecipeList" class="float-left btn btn-sm btn-outline-primary" title="Go To List">
                             <i class="fas fa-arrow-alt-circle-left"></i>
                         </a>
@@ -32,7 +32,7 @@
                 </div>
             </div>
             <div class="card-body">
-                <div class="row">
+                <div class="row" style="height:15px;">
                     <div class="col-md-7" style="border-right:2px solid #f6eaaa">
                         <h5 style="border-bottom:2px solid #f6eaaa">
                             Challan & Invoice Product
@@ -141,7 +141,7 @@
                                 <input type="text" id="ddlMeasurementSize" class="form-control form-control-sm" readonly />
 
                             </div>
-                            <div class="col-md-3">
+                            <div class="col-md-4">
                                 <label for="ddlQuanity" class="col-form-label">Quanity</label>
                                 <input type="text" id="txtQuanity" class="form-control form-control-sm" />
                                 <label for="ddlQuantity" class="control-label font-weight-bold">
@@ -169,8 +169,8 @@
                                 <input type="number" id="ddlttdis" name="ddlttdis" class="form-control form-control-sm" readonly />
                             </div>
 
-                            <div class="col-md-2" style="margin-top:5px;">
-                                <label for="" class="control-label" style="visibility:hidden"> Add To List</label>
+                            <div class="col-md-2" style="margin-top:36px;">
+                                @*<label for="" class="control-label" style="visibility:hidden"> Add To List</label>*@
                                 <div class="clearfix">
                                     <button type="submit" class="btn btn-sm btn-warning text-bold float-left" id="btnAddToList" title="Save"><i class="fas fa-plus"></i></button>
 
